--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,1 +1,53 @@
 /* Desenvolva sua estilização aqui ... */
+.header__container{
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__logo{
+    font-size: var(--font-1);
+    color: var(--color-grey-0);
+}
+
+.header__button-darkmode{
+    width: 25px;
+    height: 25px;
+    border: none;
+    border-radius: var(--radius-1);
+    background-color: var(--color-white-fixed);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.filter__title{
+    font-size: var(--font-2);
+    color: var(--color-grey-0);
+
+    
+}
+
+.filter__categories{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.filter__category {
+    height: 30px;
+    padding: 5px;
+    border: none;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    background-color: var(--color-grey-7);
+    color: var(--color-grey-3);
+    border-radius: var(--radius-1);
+
+}
+
+.filter__category-selected{
+    background-color: var(--color-grey-0);
+    color: var(--color-grey-9);
+}
