--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,3 +51,88 @@
     background-color: var(--color-grey-0);
     color: var(--color-grey-9);
 }
+
+.filter__priceDiv{
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+
+.filter__slider{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 20px;
+    background: linear-gradient(90deg, var(--color-brand-1) 60%, var(--color-grey-5) 60%);
+    opacity: 1;
+    transition: opacity 0.2s;
+    border-radius: 10px;
+}
+
+.filter__slider::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: var(--color-grey-5);
+    border-radius: 50%;
+    border: 2px solid var(--color-grey-0);
+    cursor: pointer;
+}
+.album__deck{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+  }
+  
+.album__card{
+  width: 45%;
+  height: 350px;
+  border-radius: var(--radius-1);
+  overflow: hidden;
+  background-color: var(--color-grey-8);
+}
+
+.album__image{
+  width: 100%;
+  height: auto;
+  
+}
+
+.album__button{
+    border: none;
+    background-color: var(--color-grey-7);
+}
+
+.card__mainDiv{
+    padding: 30px 10px 5px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.card__div{
+    display: flex;
+    justify-content: space-between;
+}
+/* tags multiuso */
+
+.title-1{
+  font-size: var(--font-1);
+  color: var(--color-grey-0);
+}
+.title-2{
+  font-size: var(--font-1);
+  color: var(--color-grey-0);
+}
+.title-3{
+  font-size: var(--font-1);
+  color: var(--color-grey-0);
+}
+
+.text-1{
+
+}
