--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,14 +28,15 @@
 }
 
 .filter__categories{
+  padding: 25px 2px;
   display: flex;
-  gap: 10px;
+  gap: 20px;
   flex-wrap: wrap;
 }
 .filter__category {
   height: 30px;
   padding: 5px;
-  border: none;
+  border: 1px solid var(--color-grey-7);
   display: flex;
   align-content: center;
   align-items: center;
@@ -46,8 +47,9 @@
 }
 
 .filter__category-selected{
-  background-color: var(--color-grey-0);
-  color: var(--color-grey-9);
+  background-color: var(--selected-bg);
+  color: var(--selected-font-color);
+  border: 1px solid var(--selected-border);
 }
 
 .filter__priceDiv{
@@ -59,11 +61,11 @@
 
 
 .filter__slider{
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
   -webkit-appearance: none;
   width: 100%;
-  height: 10px;
+  height: 5px;
   background: linear-gradient(90deg, var(--color-brand-1) 60%, var(--color-grey-5) 60%);
   opacity: 1;
   transition: opacity 0.2s;
@@ -75,12 +77,24 @@
   appearance: none;
   width: 25px;
   height: 25px;
-  background: var(--color-grey-5);
+  background: var(--color-white-fixed);
   border-radius: 50%;
-  border: 2px solid var(--color-grey-0);
+  border: 5px solid var(--color-brand-1);
   cursor: pointer;
 }
+
+.filter__slider::-moz-range-thumb{
+  width: 15px;
+  height: 15px;
+  background: var(--color-white-fixed);
+  border-radius: 50%;
+  border: 5px solid var(--color-brand-1);
+  cursor: pointer;
+}
+
 .album__deck{
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -133,6 +147,3 @@
   color: var(--color-grey-0);
 }
 
-.text-1{
-
-}
